# CellViT

./: .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt
base_ml/: base_experiment.py
cell_segmentation/experiments/: experiment_cellvit_conic.py  experiment_cellvit_pannuke.py  experiment_cpp_net_pannuke.py  experiment_stardist_pannuke.py
cell_segmentation/inference/: cell_detection.py  cell_detection_256.py  cell_detection_mp.py  inference_cellvit_experiment_monuseg.py  inference_cellvit_experiment_pannuke.py  inference_stardist_experiment_pannuke.py
cell_segmentation/trainer/: trainer_cellvit.py  trainer_stardist.py
configs/Pannuke-ViT256/: allfolds_90pct.yaml  config_fold1.yaml  config_fold2.yaml  config_fold3.yaml
datamodel/: wsi_datamodel.py
models/encoders/VIT/: vits_histo.py
models/segmentation/cell_segmentation/: cellvit.py  cellvit_shared.py
preprocessing/patch_extraction/src/: patch_extraction.py
